--- a/mining-sim/package.json
+++ b/mining-sim/package.json
@@ -11,7 +11,8 @@
   "devDependencies": {
     "typescript": "~5.6.2",
     "vite": "^6.0.1",
-    "vite-plugin-deno": "^0.0.0-alpha.0"
+    "vite-plugin-deno": "^0.0.0-alpha.0",
+    "vite-plugin-pwa": "^0.21.1"
   },
   "dependencies": {
     "phaser": "^3.55.0",
