--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "typescript": "~5.6.2",
@@ -15,6 +16,7 @@
     "vite-plugin-pwa": "^0.21.1"
   },
   "dependencies": {
+    "gh-pages": "^6.2.0",
     "phaser": "^3.55.0",
     "yaml": "^2.6.1"
   }
